--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.jkutkut.firebasestorage'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.jkutkut.firebasestorage"
@@ -48,4 +48,8 @@ dependencies {
     // Database configured on console.firebase.google.com
 
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+
+    // Glide
+    // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 }
